[workspace]
members = [
    "nodes/*",
    "runtimes/*",
    "pallets/*",
    "integration-tests",
    "macros",
    "macros/tests",
    "polimec-common/*",
]
default-members = ["nodes/*", "pallets/*"]
resolver = "2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1}
inconsistent_digit_grouping = "allow"
zero_prefixed_literal = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
identity_op = "allow"
tabs_in_doc_comments= "allow"

[workspace.lints.rust]
unreachable_patterns = "deny"

[workspace.package]
authors = ['Polimec Foundation <info@polimec.org>']
documentation = "https://hub.polimec.org/"
edition = "2021"
homepage = "https://www.polimec.org/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Polimec/polimec-node"
version = "0.9.0"

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
opt-level = 3
strip = "debuginfo"

# Make sure dev builds with backtrace do not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1


[workspace.dependencies]
# Build deps
substrate-wasm-builder = { version = "23.0.0" }

# Internal pallets (with default disabled)
pallet-dispenser = { path = "pallets/dispenser", default-features = false }
pallet-funding = { path = "pallets/funding", default-features = false }
pallet-democracy = { path = "pallets/democracy", default-features = false }
pallet-elections-phragmen = { path = "pallets/elections-phragmen", default-features = false }
pallet-oracle-ocw = { path = "pallets/oracle-ocw", default-features = false }
pallet-sandbox = { path = "pallets/sandbox", default-features = false }
pallet-parachain-staking = { path = "pallets/parachain-staking", default-features = false }
pallet-linear-release = { path = "pallets/linear-release", default-features = false }
polimec-receiver = { path = "pallets/polimec-receiver", default-features = false }
on-slash-vesting = { path = "pallets/on-slash-vesting", default-features = false }
pallet-proxy-bonding = { path = "pallets/proxy-bonding", default-features = false }

# Internal macros
macros = { path = "macros" }
macros-tests = { path = "macros/tests" }

# External pallets (with default disabled)
orml-oracle = { version = "0.13.0", default-features = false }
orml-traits = { version = "0.13.0", default-features = false }
jwt-compact = { git = "https://github.com/lrazovic/jwt-compact", default-features = false }

# Internal support (with default disabled)
shared-configuration = { path = "runtimes/shared-configuration", default-features = false }
polimec-common = { path = "polimec-common/common", default-features = false }
polimec-common-test-utils = { path = "polimec-common/test-utils", default-features = false }

# External support (with default disabled)
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }

# External (without extra features and with default disabled if necessary)
parity-scale-codec = { version = "3.6.12", default-features = false }
clap = { version = "4.5.3" }
futures = { version = "0.3.31" }
scale-info = { version = "2.11.3", default-features = false, features = [
    "derive",
] }
jsonrpsee = { version = "0.22.5", features = ["server"] }
hex-literal = "0.4.1"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.204", default-features = false }
serde_json = "1.0.120"
smallvec = "1.13.2"
log = { version = "0.4.22", default-features = false }
itertools = { version = "0.11", default-features = false, features = [
    "use_alloc",
] }
array-bytes = { version = "6.2.3", default-features = false }
serde-json-core = { version = '0.5.1', default-features = false }
heapless = { version = "0.8", default-features = false }
color-print = "0.3.6"
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }

# Emulations
xcm-emulator = { version = "0.12.0", default-features = false }

# Substrate (with default disabled)
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
frame-benchmarking = { version = "35.0.0", default-features = false }
frame-benchmarking-cli = { version = "39.0.0" }
frame-executive = { version = "35.0.0", default-features = false }
frame-support = { version = "35.0.0", default-features = false }
frame-system = { version = "35.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "33.0.0", default-features = false }
frame-system-benchmarking = { version = "35.0.0", default-features = false }
frame-try-runtime = { version = "0.41.0", default-features = false }
frame-metadata-hash-extension = { version = "0.3.0", default-features = false }
sp-api = { version = "33.0.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-staking = { version = "33.0.0", default-features = false }
# sp-runtime v38.0.1 takes out sp_std from runtime_string file and calls "alloc" directly which errors out
sp-runtime = { version = "=38.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false, features = ["serde"] }
sp-io = { version = "37.0.0", default-features = false }
sp-blockchain = { version = "35.0.0", default-features = false }
sp-consensus-aura = { version = "0.39.0", default-features = false }
sp-consensus-beefy = { version = "20.0.0", default-features = false }
sp-block-builder = { version = "33.0.0", default-features = false }
sp-genesis-builder = { version = "0.14.0", default-features = false }
sp-inherents = { version = "33.0.0", default-features = false }
sp-offchain = { version = "33.0.0", default-features = false }
sp-session = { version = "34.0.0", default-features = false }
sp-transaction-pool = { version = "33.0.0", default-features = false }
sp-trie = { version = "36.0.0", default-features = false }
sp-version = { version = "36.0.0", default-features = false }
sp-consensus-grandpa = { version = "20.0.0", default-features = false }
sp-npos-elections = { version = "33.0.0", default-features = false }
sp-tracing = { version = "17.0.0", default-features = false }
pallet-im-online = { version = "34.0.0", default-features = false }
sp-authority-discovery = { version = "33.0.0", default-features = false }
sp-consensus-babe = { version = "0.39.0", default-features = false }
pallet-message-queue = { version = "38.0.0", default-features = false }
sp-weights = { version = "31.0.0", default-features = false }

# FRAME
assets-common = { version = "0.14.0", default-features = false }
pallet-aura = { version = "34.0.0", default-features = false }
pallet-balances = { version = "36.0.0", default-features = false }
pallet-assets = { version = "36.0.0", default-features = false }
pallet-authorship = { version = "35.0.0", default-features = false }
pallet-session = { version = "35.0.0", default-features = false }
pallet-timestamp = { version = "34.0.0", default-features = false }
pallet-collective = { version = "35.0.0", default-features = false }
pallet-scheduler = { version = "36.0.0", default-features = false }
pallet-sudo = { version = "35.0.0", default-features = false }
pallet-transaction-payment = { version = "35.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "35.0.0", default-features = false }
pallet-treasury = { version = "34.0.0", default-features = false }
pallet-utility = { version = "35.0.0", default-features = false }
pallet-membership = { version = "35.0.0", default-features = false }
pallet-multisig = { version = "35.0.0", default-features = false }
pallet-preimage = { version = "35.0.0", default-features = false }
pallet-grandpa = { version = "35.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "37.0.0", default-features = false }
pallet-vesting = { version = "35.0.0", default-features = false }
pallet-staking = { version = "35.0.0", default-features = false }
pallet-proxy = { version = "35.0.0", default-features = false }
pallet-identity = { version = "35.0.0", default-features = false }
pallet-asset-tx-payment = { version = "35.0.0", default-features = false }
pallet-skip-feeless-payment = { version = "10.0.0", default-features = false }

# Polkadot (with default disabled)
pallet-xcm = { version = "14.0.0", default-features = false }
polkadot-parachain-primitives = { version = "13.0.0", default-features = false }
polkadot-runtime-parachains = { version = "14.0.0", default-features = false }
polkadot-core-primitives = { version = "14.0.0", default-features = false }
xcm = { version = "14.0.0", package = 'staging-xcm', default-features = false }
xcm-builder = { version = "14.0.0", package = 'staging-xcm-builder', default-features = false }
xcm-executor = { version = "14.0.0", package = 'staging-xcm-executor', default-features = false }
polkadot-runtime-common = { version = "14.0.0", default-features = false }
polkadot-primitives = { version = "14.0.0", default-features = false }
xcm-fee-payment-runtime-api = { version = "0.4.0", default-features = false }

# Cumulus (with default disabled)
cumulus-pallet-aura-ext = { version = "0.14.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.14.0", default-features = false }
cumulus-pallet-solo-to-para = { version = "0.14.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.14.0", default-features = false }
cumulus-pallet-xcm = { version = "0.14.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.14.0", default-features = false }
cumulus-primitives-core = { version = "0.14.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.14.0", default-features = false }
cumulus-primitives-utility = { version = "0.14.0", default-features = false }
parachain-info = { version = "0.14.0", package = 'staging-parachain-info', default-features = false }
parachains-common = { version = "14.0.0", default-features = false }
cumulus-primitives-aura = { version = "0.14.0", default-features = false }

# Client-only (with default enabled)
cumulus-client-cli = { version = "0.14.0" }
cumulus-client-collator = { version = "0.14.0" }
cumulus-client-consensus-aura = { version = "0.14.0" }
cumulus-client-consensus-common = { version = "0.14.0" }
cumulus-client-consensus-proposer = { version = "0.14.0" }
cumulus-client-service = { version = "0.14.0" }
cumulus-relay-chain-interface = { version = "0.14.0" }
polkadot-cli = { version = "14.0.0" }
polkadot-service = { version = "14.0.0" }
sc-chain-spec = { version = "34.0.0" }
sc-basic-authorship = { version = "0.41.0" }
sc-client-api = { version = "35.0.0" }
sc-consensus = { version = "0.40.0" }
sc-consensus-aura = { version = "0.41.0" }
sc-network = { version = "0.41.0" }
sc-offchain = { version = "36.0.0" }
sc-network-sync = { version = "0.40.0" }
sc-cli = { version = "0.43.0" }
sc-executor = { version = "0.39.0" }
sc-keystore = { version = "32.0.0" }
sp-consensus = { version = "0.39.0" }
sp-keyring = { version = "38.0.0" }
sc-rpc = { version = "36.0.0" }
sc-service = { version = "0.42.0" }
sc-sysinfo = { version = "34.0.0" }
sc-telemetry = { version = "21.0.0" }
sc-tracing = { version = "35.0.0" }
sc-transaction-pool = { version = "35.0.0" }
sc-transaction-pool-api = { version = "35.0.0" }
sp-keystore = { version = "0.40.0" }
sp-timestamp = { version = "33.0.0" }
sc-consensus-grandpa = { version = "0.26.0" }
sc-transaction_pool-api = { version = "28.0.0" }
substrate-frame-rpc-system = { version = "35.0.0" }
substrate-prometheus-endpoint = { version = "0.17.0" }
substrate-build-script-utils = { version = "11.0.0" }

# Benchmarking (with default disabled)
cumulus-pallet-session-benchmarking = { version = "16.0.0", default-features = false }

# Runtimes
polimec-runtime = { path = "runtimes/polimec" }
asset-hub-polkadot-runtime = { git = 'https://github.com/polkadot-fellows/runtimes', default-features = false, rev = 'c5080e43321476ec82d69b710ebfaafb634f7475' }
polkadot-runtime-constants = { git = 'https://github.com/polkadot-fellows/runtimes', default-features = false, rev = 'c5080e43321476ec82d69b710ebfaafb634f7475' }
system-parachains-constants = { git = 'https://github.com/polkadot-fellows/runtimes', default-features = false, rev = 'c5080e43321476ec82d69b710ebfaafb634f7475' }
polkadot-runtime = { git = 'https://github.com/polkadot-fellows/runtimes', default-features = false, rev = 'c5080e43321476ec82d69b710ebfaafb634f7475' }
